# max-bot-template

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
docs/: quick-start.md
src/: config.py  main.py
src/db/: base_dao.py  dao.py  database.py  models.py
src/handlers/: __init__.py  help.py  start.py  user_registration.py
